--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "node app",
+    "dev": "nodemon app"
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -16,7 +18,6 @@
     "jsdom": "^15.1.1",
     "moment": "^2.24.0",
     "mongoose": "^5.6.0",
-    "nodemon": "^1.19.1",
     "rss-parser": "^3.7.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
@@ -30,6 +31,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "nodemon": "^1.19.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "vue-cli-plugin-vuetify": "^0.5.0",
